<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/restaurant_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/restaurant_image_description" />

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/restaurant_image"
            app:layout_constraintTop_toTopOf="@id/restaurant_image"
            android:contentDescription="@string/restaurant_name_description" />

        <TextView
            android:id="@+id/restaurant_cuisine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/restaurant_name"
            app:layout_constraintTop_toBottomOf="@id/restaurant_name"
            android:contentDescription="@string/restaurant_cuisine_description" />

        <TextView
            android:id="@+id/restaurant_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/restaurant_cuisine"
            app:layout_constraintTop_toBottomOf="@id/restaurant_cuisine"
            android:contentDescription="@string/restaurant_location_description" />

        <TextView
            android:id="@+id/restaurant_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/restaurant_location"
            app:layout_constraintTop_toBottomOf="@id/restaurant_location"
            android:contentDescription="@string/restaurant_rating_description" />
        <TextView
            android:id="@+id/restaurant_avg_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/restaurant_rating"
            app:layout_constraintTop_toBottomOf="@id/restaurant_rating"
            android:contentDescription="@string/restaurant_avg_price_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
